--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-    "extends": ["eslint:recommended", "google"]
+    "env": {
+        "browser": true,
+        "node": true,
+        "es6": true
+    },
+    "extends": ["eslint:recommended", "google"],
+    "rules": {
+        "no-console": 0
+    }
 }
