--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ node_modules
 
 # Debug log from npm
 npm-debug.log
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
