--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "hbs": "~4.0.1",
+    "jquery": "^3.2.1",
     "morgan": "~1.8.1",
+    "popper.js": "^1.11.1",
     "serve-favicon": "~2.4.2"
   }
 }
