Change eslint linebreak style to windows from unix

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     },
     "extends": ["eslint:recommended", "google"],
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+		"linebreak-style": ["error", "windows"]
     }
 }
