--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-beta",
+    "chartist": "^0.11.0",
+    "chartist-plugin-tooltips": "0.0.17",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "hbs": "~4.0.1",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
     "morgan": "~1.8.1",
     "popper.js": "^1.11.1",
     "serve-favicon": "~2.4.2"
