--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -16,8 +16,9 @@
     "hbs": "~4.0.1",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "mongojs": "^2.4.1",
     "morgan": "~1.8.1",
-    "popper.js": "^1.11.1",
+    "popper.js": "^1.12.3",
     "serve-favicon": "~2.4.2"
   }
 }
