--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.18.1",
     "mongojs": "^2.4.1",
     "morgan": "~1.8.1",
+    "open-iconic": "^1.1.1",
     "popper.js": "^1.12.3",
     "serve-favicon": "~2.4.2"
   }
