Add facebook scraper

--- a/scraper/package.json
+++ b/scraper/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "mongojs": "^2.4.1",
-    "node-vkapi": "^2.1.0"
+    "node-vkapi": "^2.1.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
