--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.8.1",
     "open-iconic": "^1.1.1",
     "popper.js": "^1.12.3",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "telegram-mtproto": "^2.2.2"
   }
 }
