--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -21,6 +21,7 @@
     "open-iconic": "^1.1.1",
     "popper.js": "^1.12.3",
     "serve-favicon": "~2.4.2",
+    "social-stalker-storage": "file:../storage",
     "telegram-mtproto": "^2.2.2"
   }
 }
