--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -1,10 +1,12 @@
 {
   "name": "social-stalker-web-ui",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Web UI for viewing info about scraped users",
   "scripts": {
     "start": "node ./bin/www"
   },
+  "author": "Serhii Shymkov",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-beta",
